Connect frontend to backend user management
- Login endpoint
- Logout endpoint
- Settings Page
- Change to HashRouter to support our nginx config
