# api/src/controller/calender.controller.ts
@@ -1,21 +1,25 @@
-import {Tags, Route, Get, Body} from "tsoa";
+import { Tags, Route, Get, Body } from "tsoa";
 import CalenderService from "../service/calender.service";
 import { Lecture } from "@prisma/client";
 import { setFlagsFromString } from "v8";
 
 @Tags("Calender Handler")
 @Route("calender")
-export default class CalenderController{
-    public async getCalender(id: string, start: Date, end: Date): Promise<Lecture[]|String> {
-        const service = new CalenderService();
-        return service.getCalender(id, start, end);
-    }    
-    
-    @Get("course/list")
-    public async getCourseList(): Promise<Array<{name: string, id: string}>> {
-        const service = new CalenderService();
-        return service.getCourseList();
-    }
+export default class CalenderController {
+  public async getCalender(
+    id: string,
+    start: Date,
+    end: Date
+  ): Promise<Lecture[] | String> {
+    const service = new CalenderService();
+    return service.getCalender(id, start, end);
+  }
+
+  @Get("course/list")
+  public async getCourseList(): Promise<Array<{ name: string; id: string }>> {
+    const service = new CalenderService();
+    return service.getCourseList();
+  }
 }
 
-export {CalenderController}
+export { CalenderController };
