# api/src/controller/settingsTSOA.controller.ts
@@ -1,12 +1,12 @@
-import {Tags, Route, Get, Post} from "tsoa";
+import { Tags, Route, Get, Post } from "tsoa";
 
 @Tags("Setting Handler")
 @Route("settings")
-export default class SettingController{
-    @Get("")
-    public async getSettings(): Promise<void> {}
-    @Post("")
-    public async setSettings(): Promise<void> {}
+export default class SettingController {
+  @Get("")
+  public async getSettings(): Promise<void> {}
+  @Post("")
+  public async setSettings(): Promise<void> {}
 }
 
-export {SettingController}
+export { SettingController };
