# api/src/controller/status.controller.ts
@@ -1,19 +1,18 @@
-import {Tags, Get, Route} from "tsoa";
+import { Tags, Get, Route } from "tsoa";
 
 interface StatusResponse {
-    message: string;
+  message: string;
 }
 
 @Tags("Health-Check")
 @Route("status")
-export default class StatusController{
-    @Get("/")
-    public async getStatus(): Promise<StatusResponse> {
-        return {
-            message: "Running...",
-        };
-
-    }
+export default class StatusController {
+  @Get("/")
+  public async getStatus(): Promise<StatusResponse> {
+    return {
+      message: "Running...",
+    };
+  }
 }
 
-export {StatusController}
+export { StatusController };
